AttackScreen - gameMessage and computer players synced